freest/test/prog/Invalid/Linearity/TopLevelLinNotUsed/TopLevelLinNotUsed.fst
module TopLevelLinNotUsed where

f : Int -1-> Int
f n = n + 1

main : ()
main = ()
